# swc-plugin-remove-node-protocol

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
__test__/: wasm.test.ts
__test__/__snapshots__/: wasm.test.ts.snap
__test__/fixtures/: input.js
